--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,5 +34,5 @@ jobs:
         run: |
           docker pull gcr.io/cadvisor/cadvisor-arm64:v0.47.2
           docker login --username=389816017@qq.com --password="WeikeS1105" registry.cn-hangzhou.aliyuncs.com
-          docker tag cadvisor-arm64:v0.47.2 registry.cn-hangzhou.aliyuncs.com/weeks_docker/weeks:v0.47.2
+          docker tag gcr.io/cadvisor/cadvisor-arm64:v0.47.2 registry.cn-hangzhou.aliyuncs.com/weeks_docker/weeks:v0.47.2
           docker push registry.cn-hangzhou.aliyuncs.com/weeks_docker/weeks:v0.47.2
